Bug 480216 - Wobbly window effect doesn't work when zoomed in
Summary: Wobbly window effect doesn't work when zoomed in
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.27.10
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-23 10:24 UTC by koko.venkov
Modified: 2024-01-25 23:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description koko.venkov 2024-01-23 10:24:33 UTC
SUMMARY

When I use the zoom in feature (Meta + Plus, Meta + Minus), and move around a window, the "Wobbly Window" effect stops working.

STEPS TO REPRODUCE
1. Enable "Wobbly Windows"
2. Set some extreme values, so the effect is obvious
2. Zoom in
3. Move around any window

OBSERVED RESULT

Windows move normally

EXPECTED RESULT

Windows should be wobbly when moved around


SOFTWARE/OS VERSIONS
Linux: Arch linux with kernel 6.7.0-arch3-1 (64-bit)
Graphics Platform: Wayland
GPU: Integrated AMD Radeon Graphics (AMD Ryzen 5 5600H)
(available in About System)
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.114.0
Qt Version: 5.15.12
Comment 1 Bug Janitor Service 2024-01-25 13:11:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5043
Comment 2 Vlad Zahorodnii 2024-01-25 23:17:42 UTC
Git commit 91ae3d907e93c18c15661f7f7ecadd46147a554c by Vlad Zahorodnii.
Committed on 25/01/2024 at 14:10.
Pushed by vladz into branch 'master'.

plugins/zoom: Unset PAINT_SCREEN_TRANSFORMED

It's not needed because of the offscreen texture.

M  +0    -1    src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/91ae3d907e93c18c15661f7f7ecadd46147a554c
Comment 3 Vlad Zahorodnii 2024-01-25 23:18:04 UTC
Git commit 9b964088dc8f4807477773237d07823ea7479c7b by Vlad Zahorodnii.
Committed on 26/01/2024 at 00:18.
Pushed by vladz into branch 'Plasma/6.0'.

plugins/zoom: Unset PAINT_SCREEN_TRANSFORMED

It's not needed because of the offscreen texture.


(cherry picked from commit 91ae3d907e93c18c15661f7f7ecadd46147a554c)

M  +0    -1    src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/9b964088dc8f4807477773237d07823ea7479c7b