perf(plugin): unset PAINT_SCREEN_TRANSFORMED in zoom

It's not needed because of the offscreen texture.

BUG: 480216